Creato con Colab

--- a/Huggingface Platform and its API/HuggingFace_demo.ipynb
+++ b/Huggingface Platform and its API/HuggingFace_demo.ipynb
@@ -47344,7 +47344,7 @@
         "id": "J-Bw4XHMqtOW",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 335
+          "height": 300
         },
         "outputId": "63d5673c-e752-4e85-8f23-c316c484ad4b"
       },
@@ -47545,6 +47545,18 @@
     {
       "cell_type": "code",
       "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "Mvz7khiy-ztP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Save the model\n",
         "model.save_pretrained('./fine-tuned-model')\n",
         "tokenizer.save_pretrained('./fine-tuned-tokenizer')\n"
@@ -47573,6 +47585,31 @@
           "execution_count": 13
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# save the content in a zip and download it, in alternativa connettersi a google\n",
+        "# drive e salvare tutto lì in apposite cartelle\n",
+        "!zip -r /content/files.zip /content/\n",
+        "from google.colab import files\n",
+        "files.download(\"/content/file.zip\")"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "0qpfZpkrAK9z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yUYz57ChHEbl"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
