Creato con Colab

--- a/Huggingface Platform and its API/Text_Summarizer_project.ipynb
+++ b/Huggingface Platform and its API/Text_Summarizer_project.ipynb
@@ -756,7 +756,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 36
         },
         "id": "N4p4N9wlFbz0",
         "outputId": "30e9adc0-ee61-4dfd-9237-1304a4f23a94"
@@ -1187,7 +1187,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 338
+          "height": 303
         },
         "id": "Ji0kGfD5LKGG",
         "outputId": "a673dc17-9860-43fb-bf32-370f04eec788"
@@ -1639,10 +1639,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Save model & Tokenizer"
+        "#### Save model & Tokenizer\n",
+        "(modello occupa molti GB, sconsigliato salvare su Google Drive)"
       ],
       "metadata": {
         "id": "vFd1K_31Mk8M"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "3Vxpw6HxQ5pq"
       }
     },
     {
@@ -1652,11 +1660,11 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "qmkTfRqIMpkL",
-        "outputId": "0830092e-5fc5-4d27-d327-71de9805cde4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qmkTfRqIMpkL",
+        "outputId": "0830092e-5fc5-4d27-d327-71de9805cde4"
       },
       "execution_count": 48,
       "outputs": [
@@ -1675,11 +1683,11 @@
         "%cd /content/drive/MyDrive/CORSO_GENAI/'HUGGING FACE'/'MODEL TEXT SUMMARIZER'"
       ],
       "metadata": {
-        "id": "Sxd06KpLM0jK",
-        "outputId": "160cdf81-4255-4e24-a039-9baea73e0c4f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Sxd06KpLM0jK",
+        "outputId": "160cdf81-4255-4e24-a039-9baea73e0c4f"
       },
       "execution_count": 62,
       "outputs": [
@@ -1742,11 +1750,11 @@
         "!pwd"
       ],
       "metadata": {
-        "id": "SVrF6PzqPcBy",
-        "outputId": "6940f5ce-a51e-43fa-96f1-fa8253788a74",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SVrF6PzqPcBy",
+        "outputId": "6940f5ce-a51e-43fa-96f1-fa8253788a74"
       },
       "execution_count": 67,
       "outputs": [
